# ctf-arena

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SHARE.md  install.sh  pyproject.toml
arena/: __init__.py  cli.py  client.py  config.py  coord.py  critic.py  dashboard.py  loop.py  racer.py  runner.py
arena/hooks/: content_guard.py  loop_guard.py  output_guard.py  reflect_probe.py  request_camo.py  vault_nudge.py
arena/solvers/: __init__.py  base.py  claude_code.py  codex.py  gemini.py
mcp/: README.md  mcp.example.json  setup-mcp.sh
mcp/ours/magic-mcp/: magic_engine.py  server.py
mcp/ours/netsession/: README.md  server.py
skills/ctf-method/: SKILL.md
skills/ctf-web/: SKILL.md
vault/: INDEX.md  crypto.md  forensics.md  misc.md  osint.md  pwn.md  rev.md  web.md
viz/: live.html  system.html
